# movie_recommendation_system

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
movie_recomendation_system/: __init__.py  dataset.py  features.py  plots.py
movie_recomendation_system/modeling/: predict.py  train.py
notebooks/: data_preprocessing.ipynb
